# json-c

./: CMakeLists.txt  json_config.h.win32
tests/: CMakeLists.txt
